--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "seed-admin": "node database/seeders/adminSeeder.js",
     "seed-users": "node database/seeders/usersSeeder.js",
     "seed-icd": "node database/seeders/icdSeeder.js",
-    "dev": "nodemon index",
-    "start": "node index"
+    "dev": "nodemon src/index",
+    "start": "node src/index"
   },
   "author": "",
   "license": "ISC",
